add server Dockerfiles; add shadowJar for api