@@ -1,8 +1,11 @@
+import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
+
 plugins {
     java
     application
     kotlin("jvm") version "1.4.20"
     kotlin("plugin.serialization") version "1.4.10"
+    id("com.github.johnrengelman.shadow") version "6.1.0"
 }
 
 tasks.withType<org.jetbrains.kotlin.gradle.tasks.KotlinCompile> {
@@ -30,10 +33,31 @@ dependencies {
 
 
 application {
+    mainClassName = "cos.api.Main" // need for ShadowJar
     mainClass.set("cos.api.Main")
     applicationDefaultJvmArgs = listOf(
         "--enable-preview",
         "-Xmx200m"
 //        "-verbose:class"
     )
+}
+
+
+
+tasks {
+
+    withType<ShadowJar> {
+        archiveFileName.set("api.jar")
+    }
+
+    withType<com.github.jengelman.gradle.plugins.shadow.internal.JavaJarExec> {
+        args = listOf("--enable-preview")
+    }
+
+    register<JavaExec>("runJar") {
+        dependsOn("shadowJar")
+        group = "Application"
+        description = "Run image"
+        main = "-jar /Users/aleksandrsuslov/projects/cosmos/cos/api/build/libs/api.jar";
+    }
 }
